fixed routes alignment

--- a/src/modules/core/styles/mixins.scss
+++ b/src/modules/core/styles/mixins.scss
@@ -100,14 +100,14 @@
 }
 
 @mixin footerMargin {
-  margin-bottom: 346px;
-  box-shadow: 0px 4px 10px -1px rgba(135, 133, 135, 0.63);
   background-color: $white;
-  @media screen and (max-width: 970px) {
-    margin-bottom: 580px;
+
+  @include tablet() {
+    margin-bottom: 325px;
+    box-shadow: 0px 4px 10px -1px rgba(135, 133, 135, 0.63);
   }
-  @media screen and (max-width: 550px) {
-    box-shadow: none;
-    margin-bottom: 0;
+
+  @include desktop() {
+    margin-bottom: 400px;
   }
 }
