--- a/src/modules/pages/course-partnership/course-partnership.scss
+++ b/src/modules/pages/course-partnership/course-partnership.scss
@@ -1,1 +1,6 @@
 @import 'core.scss';
+
+.course-partnership {
+  @include flex($align: stretch, $direction: column);
+  flex: 1;
+}
